--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="invalid_email">Invalid email</string>
     <string name="login_sucess">Successful login</string>
     <string name="pass_wrong">Password incorrect</string>
+    <string name="textview">TextView</string>
 
 
 </resources>
